# examples

./: .bazelignore  BUILD.bazel  MODULE.bazel
.github/workflows/: test.yaml
frontlessjs/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontlessjs/app/: BUILD.bazel  defs.bzl  main.ts  package.json  tsconfig.json
frontlessjs/app/components/: BUILD.bazel  footer.spec.ts  footer.ts  header.spec.ts  header.ts
frontlessjs/app/pages/: BUILD.bazel  _layout.css  _layout.ts  index.spec.ts  index.ts
frontlessjs/internal/testing/: BUILD.bazel  index.ts  package.json
frontlessjs/tools/: BUILD.bazel  package.json  tsx.bzl
frontlessjs/tools/docker/: BUILD.bazel  run_app
internal/: BUILD.bazel  _README.md  defs.bzl
lit-simple/: MODULE.bazel  index.html  package.json  pnpm-lock.yaml
lit-simple/src/: BUILD.bazel  main.ts  tsconfig.json
web-dev-server/: BUILD.bazel  MODULE.bazel  index.html  package.json  pnpm-lock.yaml
