load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")

exports_files(["README.md"])

write_source_files(
    name = "source_files",
    files = {
        ":README.md": "//internal:README.md",
        ":.bazelignore": "//internal:dirlist",
    },
)

buildifier(
    name = "format",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "fix",
    mode = "fix",
)

buildifier_test(
    name = "lint",
    size = "small",
    lint_mode = "warn",
    mode = "check",
    no_sandbox = True,
    workspace = "//:WORKSPACE",
)
