load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

buildifier(
    name = "format",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "fix",
    mode = "fix",
)

buildifier_test(
    name = "lint",
    size = "small",
    lint_mode = "warn",
    mode = "check",
    no_sandbox = True,
    workspace = "//:WORKSPACE",
)
