load("//internal:defs.bzl", "dirlist", "readme")

dirlist(
    name = "dirlist",
    exclude = [
        "~",  # somehow this appears in ci runs
        ".git",
        "internal",
    ],
    visibility = ["//visibility:public"],
)

readme(
    name = "readme",
    src = ":_README.md",
    dirlist = ":dirlist",
    visibility = ["//visibility:public"],
)
