module(
    name = "lit_simple",
    version = "0.0.0",
)

bazel_dep(name = "aspect_rules_ts", version = "2.2.0")
bazel_dep(name = "aspect_rules_js", version = "1.40.0")
# bazel_dep(name = "rules_nodejs", version = "6.0.5")
#
# node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
# node.toolchain()

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()

use_repo(npm, "npm")

use_repo(rules_ts_ext, "npm_typescript")
