load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

npm_package(
    name = "testing",
    srcs = [
        "index.ts",
        "package.json",
    ],
    package = "@frontless-example/testing",
    visibility = ["//:__subpackages__"],
)
